--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js"></script>
 
 </head>
-<body ng-app="my.tabs">
+<body ng-app="myModal">
 <nav>
     <ul>
         <li ng-repeat="tab in tabsmenu">{{tab}}</li>
