--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!doctype html>
 <html lang="en" >
-<head>
-  <meta charset="utf-8">
-  <title>My HTML File</title>
-  <script src="angular.js"></script>
+    <head>
+    <meta charset="utf-8">
+    <title>My HTML File</title>
+    <script src="angular.js"></script>
     <script src="index.js"></script>
+        <style>
+            #myModal {
+                position:absolute;
+                background:none;
+                width:400px;
+                height:400px;
+                border:5px solid #000;
+                z-index: 9002;
+            }
+        </style>
 
 </head>
-<body ng-app="myModal">
-<nav>
-    <ul>
-        <li ng-repeat="tab in tabsmenu">{{tab}}</li>
-    </ul>
-</nav>
-<h2>tabs 1</h2>
-<div my-tabs>
-    <div my-tab="Tab">1</div>
-    <div my-tab="Other">Other container</div>
+<body ng-app="myModal" ng-controller="MyCtrl">
+
+
+
+
+<div >
+<input type="button" ng-click="myModal()" value="pop"/>
+    <input type="button" ng-click="myModalClose()" value="close"/>
 </div>
 <hr>
 
-<h2>Tabs 2</h2>
-<div my-tabs>
-    <div my-tab="Tab">2</div>
-    <div my-tab="Other">Other container 2</div>
-    <div my-tab="Other">Other container 3</div>
-    <div my-tab="Other">Other container 4</div>
-    <div my-tab="Other">Other container 5</div>
-</div>
+<div id="popup"></div>
 
 
 
