--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
     <meta charset="utf-8">
     <title>My HTML File</title>
     <script src="angular.js"></script>
-    <script src="index.js"></script>
-        <style>
-            #myModal {
-                position:absolute;
-                background:none;
-                width:400px;
-                height:400px;
-                border:5px solid #000;
-                z-index: 9002;
-            }
-        </style>
+
+        <script src="app.js"></script>
+        <script src="index.js"></script>
+
 
 </head>
 <body ng-app="myModal" ng-controller="MyCtrl">
@@ -23,12 +16,12 @@
 
 
 <div >
-<input type="button" ng-click="myModal()" value="pop"/>
-    <input type="button" ng-click="myModalClose()" value="close"/>
+<input type="button" ng-click="myModalOpen()" value="pop"/>
+
 </div>
 <hr>
 
-<div id="popup"></div>
+
 
 
 
